--- a/projeto_02_danki/css/style.css
+++ b/projeto_02_danki/css/style.css
@@ -69,6 +69,7 @@ section.cover-form {
     width: 400px;
     height: 105%;
     box-shadow: 1px 1px 2px 1px rgba(160, 160, 160, 0.9);
+    z-index: 2;
 }
 
 .form-container h2 {
