--- a/projeto_03_danki/css/style.css
+++ b/projeto_03_danki/css/style.css
@@ -52,13 +52,14 @@ header nav.mobile-menu {
     cursor: pointer;
 }
 
-header nav.mobile-menu:hover ul {
+/* header nav.mobile-menu:hover ul {
     opacity: 1;
-}
+} */
 
 header nav.mobile-menu ul {
-    opacity: 0;
-    transition: 1s;
+    display: none;
+    /* opacity: 0;
+    transition: 1s; */
     background-color: #fff;
     position: absolute;
     width: 100%;
@@ -400,7 +401,7 @@ section.sessao4 .map-wraper2 {
     padding-top: 100%;
 }
 
-section.sessao4 .gmap_canvas {
+section.sessao4 .map {
     position: absolute;
     left: 0;
     top: 0;
