--- a/projeto_05_danki/css/style.css
+++ b/projeto_05_danki/css/style.css
@@ -40,6 +40,7 @@ header nav.mobile {
 }
 
 header nav.mobile ul {
+    display: none;
     width: 100%;
     position: absolute;
     left: 0;
@@ -48,7 +49,7 @@ header nav.mobile ul {
     list-style-type: none;
     background-color: #FFF;
     border: 2px solid #EB2D2D;
-    display: none;
+    z-index: 999;
 }
 
 header nav.mobile ul li {
